<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="hello">Welcome!</string>
  <string name="pause">Lock</string>
  <string name="continue_btn">Unlock</string>
  <string name="app_name">Photography Assistant</string>
  <string name="aperture_spinner_prompt">Please set aperture</string>
  <string name="iso_spinner_prompt">Please set ISO</string>
  <string name="exposure_spinner_prompt">Please set EV setting</string>
  <string name="shutter_speed_spinner_prompt">Please set Shutter Speed</string>
  <string name="focal_length_spinner_prompt">Please select focal length</string>

  <string name="copyright">copyright © 2010 Kailuo Wang</string>
  <string name="version">Version 1.5</string>
  <string name="about">About</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="photo_website">Online Gallery: http://kailuowang.com</string>
  <string name="blog_website">Blog: http://kailuowang.blogspot.com</string>
  <string name="twitter">Twitter: @kailuowang</string>
  <string name="calibrate">Calibrate</string>
  <string name="help_introduction">Photography Assistant provides exposure setting calculation and depth of field calculation.
    It was designed mostly to use with film cameras. It also tries to take advantage of the ambient light sensor on the phone.
  </string>
  <string name="help_disclaimer">Ambient light sensor, if your phone has one,
    could be very inaccurate. Manual exposure setting is preferred for accuracy.
  </string>
  <string name="help_usage_auto">To use the built-in light sensor, click the \"Auto EV\" radio button
    and check the status message, it will say something like "Using CM3602 Light sensor" if you have ambient light
    sensor on the phone.
    Then if you place the cell phone as you would place an incident light sensor, the screen is the front side. The
    shutter speed will then be calculated and displayed. Sometimes the ambient light sensor can be slow in response and
    you will see N/A as reading,
    in this case, move the cell phone to face different light situation will trigger the ambient light sensor to report
    new reading.
    You can use the lock button to lock the exposure value read from the ambient light sensor,
    just like what you can do with an incident light meter.
  </string>
  <string name="help_usage_manual">The manual exposure settings is actually more useful than the auto one.
    Because ambient light sensor, if your phone has one, is usually not accurate enough.
    With the help of the textual description,
    you probably can do a better job than the built-in ambient light sensors.
  </string>
  <string name="help_usage_calibration">
    You can also calibrate the ambient light sensor.
    There is a calibration constant that affects how Exposure value is calculated
    from the illumination value read from the ambient light sensor.
    By calibration, you can help the app adjust this constant so that exposure value could be more accurate.
    To calibrate, place your phone in a light situation where you can easily tell the exposure value,
    then set the manual exposure setting to be that value.
    Then click menu -> Calibrate and click the calibrate button in the pop-up window.
    The app will then recalculate the calibration constant so that it will generate
    the same exposure value using the ambient light sensor\'s illumination reading.
  </string>
  <string name="help_menu_title">Help</string>
  <string name="road_map">Road map: http://wiki.github.com/kailuowang/LightMeter/road-map</string>
  <string name="circle_of_confusion_spinner_prompt">Please select format of the camera</string>
  <string name="lengthUnitSpinner_prompt">Please select the unit for distance</string>
  <string name="help_introduction_title">Introduction</string>
  <string name="help_disclaimer_title">Disclaimer</string>
  <string name="help_auto_exposure_title">Usage of Auto EV (Exposure Value)</string>
  <string name="help_manual_exposure_title">Usage of Manual EV (Exposure Value)</string>
  <string name="help_calibrate_title">Calibrate Ambient Light Sensor</string>
  <string name="help_work_mode_title">Work Modes</string>
  <string name="help_work_modes">There are 3 modes you can select to work with. Av (Aperture Priority), Sv (Shutter Priority) and M (Manual).
  Av is the very basic that we probably use most often. Sv can be used when shooting video.
    M is developed so that this app can work with other light meters. In M mode, this App is mainly for depth of field calculation.
  </string>
  <string name="Author">Author: Kailuo Wang</string>
  <string name="category_spinner_prompt">Select the category of the scenario</string>
  <string name="scenario_spinner_prompt">Select the light scenario</string>
</resources>
