<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp">

  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:stretchColumns="1">
    <TableRow>
      <TextView android:id="@+id/textAboutVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:padding="3dip"/>
    </TableRow>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:text="@string/Author"
        android:autoLink="web"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:text="@string/photo_website"
        android:autoLink="web"/>
    <TableRow>
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:padding="3dip"
          android:text="@string/twitter"/>
    </TableRow>
    <TableRow>
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:padding="3dip"
          android:text="@string/blog_website"
          android:autoLink="web"/>
    </TableRow>
    <TableRow>
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:padding="3dip"
          android:text="@string/copyright"/>
    </TableRow>

  </TableLayout>
</LinearLayout>