<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp">

  <TableLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:stretchColumns="1">
    <TableRow>
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/category_spinner_prompt"
          android:padding="3dip"/>
    </TableRow>
    <TableRow>
      <Spinner
          android:id="@+id/categorySpinner"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:drawSelectorOnTop="true"
          android:gravity="left"
          android:prompt="@string/category_spinner_prompt"/>
    </TableRow>
    <TableRow>
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"

          android:text="@string/scenario_spinner_prompt"
          android:padding="3dip"/>
    </TableRow>
    <TableRow>
      <Spinner
          android:id="@+id/scenarioSpinner"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:drawSelectorOnTop="true"
          android:gravity="left"
          android:prompt="@string/scenario_spinner_prompt"/>
    </TableRow>
    <TableRow>
      <TextView
          android:id="@+id/lightValueSelectText"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="Select light value"
          android:padding="3dip"
          android:visibility="gone" />
    </TableRow>
    <TableRow>
      <RadioGroup
          android:id="@+id/lightValueRadioGroup"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:visibility="gone">
      </RadioGroup>
    </TableRow>
    <TableRow>
      <Button
          android:id="@+id/select_light_value_cancel_button"
          android:text="@string/cancel"
          android:gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="40dip"/>
    </TableRow>
  </TableLayout>
</LinearLayout>